--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1265\cocoasubrtf210
-{\fonttbl\f0\fnil\fcharset0 Consolas;}
-{\colortbl;\red255\green255\blue255;\red38\green38\blue38;}
-\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720
-
-\f0\fs24 \cf2 # Compiled source #\
+# Compiled source #\
 ###################\
 *.com\
 *.class\
@@ -41,4 +34,4 @@
 .Spotlight-V100\
 .Trashes\
 ehthumbs.db\
-Thumbs.db}
+Thumbs.db
